src/test/ui/imports/unresolved-imports-used.stderr
error[E0432]: unresolved import `qux::bar`
  --> $DIR/unresolved-imports-used.rs:10:5
   |
LL | use qux::bar;
   |     ^^^^^^^^ no `bar` in `qux`

error[E0432]: unresolved import `qux::bar2`
  --> $DIR/unresolved-imports-used.rs:13:5
   |
LL | use qux::bar2;
   |     ^^^^^^^^^ no `bar2` in `qux`

error[E0603]: function `quz` is private
  --> $DIR/unresolved-imports-used.rs:9:10
   |
LL | use qux::quz;
   |          ^^^

error: unused import: `qux::quy`
  --> $DIR/unresolved-imports-used.rs:16:5
   |
LL | use qux::quy;
   |     ^^^^^^^^
   |
note: lint level defined here
  --> $DIR/unresolved-imports-used.rs:2:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0432, E0603.
For more information about an error, try `rustc --explain E0432`.
